# langchain-learning-and-using

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_Fundamentos.ipynb  02_OpenAI_Completion_Chat_Models.ipynb  03_LangChain.ipynb  04_Caching.ipynb  05_Templates.ipynb  06_Chains.ipynb  DEBUGS.ipynb
