[project]
name = "langchain-learning-and-using"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens>=3.0.1",
    "black>=26.1.0",
    "comm>=0.2.3",
    "isort>=7.0.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.17",
    "pip>=26.0.1",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.19",
]
